# deepcreampy

./: .gitignore  README.md  requirements.txt
.github/workflows/: release.yml
DeepCreamPy/src/: App.vue
DeepCreamPy/src/components/: Button.vue  SubmitButton.vue  ViewFiles.vue
app/: config.py  local.py  main.py  main.spec  requirements.txt  server.py
app/server/: instance.py  myqueue.py  server.py  task.py
docs/: INSTALLATION.md  TROUBLESHOOTING.md  USAGE.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  index.css  main.ts
frontend/src/components/: DropOver.vue  SubmitButton.vue  UploadPage.vue  ViewFiles.vue
lib-cream-py/: decensor.py  pyproject.toml
lib-cream-py/model/: contextual_block.py  decoder.py  disciminator_red.py  encoder.py  model.py
lib-cream-py/src/: lib_cream_py.py  logger.py  mask.py  util.py
lib-cream-py/src/model/: contextual_block.py  decoder.py  disciminator_red.py  encoder.py  model.py
models/: .gitignore
server/: config.py  index.css  index.js  local.py  main.py  main.spec  requirements.txt  server.py
server/server/: instance.py  myqueue.py  server.py  task.py
server/serverr/: instance.py  myqueue.py  server.py  task.py
